# pypackage

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
pypackage/: __init__.py  code.py  version.py
src/pypackage/: __init__.py  version.py
