[metadata]
name = pypackage
version = attr: pypackage.version.__version__
author = Thomas Arvanitidis
author_email = thomas@work.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomasarvanitidis/pypackage
project_urls =
    Bug Tracker = https://github.com/thomasarvanitidis/pypackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
